# anone

./: .env.local  .gitignore  4-node-deploy.sh  Dockerfile  Makefile  buf.gen.yaml  config.yml  debug.txt  deploy.sh  genesis_gravity.sh  gentx-instruction.md  go.mod  go.sum  keplr_suggestion.txt  node_deploy.sh  readme.md  test_node.sh  test_node_deploy.sh  validator creation.md
.github/ISSUE_TEMPLATE/: anone-task.md
.github/workflows/: anone-wasm.yml  deploy.yml
anone-contracts/: .gitignore  Cargo.toml  README.md
anone-contracts/an721/: Cargo.toml
anone-contracts/an721/src/: contract.rs  error.rs  msg.rs
anone-contracts/anone-minter/: Cargo.toml
anone-contracts/anone-minter/src/: contract.rs  error.rs  msg.rs
anone-contracts/contracts/an721/: .gitignore  Cargo.toml
anone-contracts/contracts/an721/src/: contract.rs  error.rs  lib.rs  state.rs
anone-contracts/contracts/anone-minter/: Cargo.toml  README.md
anone-contracts/contracts/anone-minter/src/: contract.rs  error.rs  msg.rs  state.rs
anone-contracts/contracts/anone-nft-marketplace/: Cargo.toml  README.md
anone-contracts/contracts/anone-nft-marketplace/examples/: schema.rs
anone-contracts/contracts/anone-nft-marketplace/schema/: execute_msg.json  instantiate_msg.json  offerings_response.json  query_msg.json  query_offerings_result.json
anone-contracts/contracts/anone-nft-marketplace/src/: contract.rs  msg.rs  package.rs  state.rs
anone-contracts/contracts/anone-whitelist/: Cargo.toml
anone-contracts/contracts/anone-whitelist/examples/: schema.rs
anone-contracts/contracts/anone-whitelist/src/: contract.rs  error.rs
anone-contracts/scripts/: buy_nft.sh  cancel_sale.sh  create_sale.sh  deploy_contract.sh  deploy_contract_anone_nft_marketplace.sh  query.sh  query_code.sh  sell_nft.sh  store_contract.sh  withdraw_nft.sh
anone-contracts/types/: package.json  tsconfig.json
anone-contracts/types/contracts/anone-minter/: config.d.ts  config_response.d.ts  instantiate_msg.d.ts
anone-cw20/: .gitignore
anone-cw20/schema/: allowance_response.json  query_msg.json
anone-cw20/scripts/: deploy_contract.sh  transfer.sh
anone-cw721/: .gitignore  Cargo.toml  README.md  deploy_contract.sh  mint.sh
anone-cw721/default_nft/: ERC_721_MOCK_DATA.json  README.md
anone-cw721/examples/: schema.rs
anone-cw721/scripts/: approve_nft.sh  burn.sh  create_model.sh  deploy_contract.sh  mint.sh  modify_collection_info.sh  query_all.sh  query_all_data_of_all_models.sh  query_all_data_of_all_nfts.sh  query_all_models.sh  query_all_nfts.sh  query_approval.sh  query_approvals.sh  query_collection_info.sh  query_single.sh  query_single_model.sh  query_single_nft.sh  revoke_nft.sh  store_contract.sh  transfer.sh
anone-cw721/src/: contract.rs  error.rs  lib.rs  metadata.rs  msg.rs  query.rs  state.rs
anone-minter/: Cargo.toml  README.md
anone-minter/examples/: schema.rs
anone-minter/scripts/: deploy_contract.sh  mint_sender.sh  store_contract.sh
anone-minter/src/: contract.rs  msg.rs  state.rs
anone-nft-marketplace/: Cargo.toml  README.md
anone-nft-marketplace/scripts/: buy_nft.sh  cancel_sale.sh  create_sale.sh  deploy_contract_anm.sh  query_by_price_range.sh  query_of_collection.sh  query_of_seller.sh  query_offerings_list.sh  store_contract.sh  update_price.sh
anone-nft-marketplace/src/: contract.rs  error.rs  msg.rs  package.rs  state.rs
anone-tools/: README.md  config.example.js  package.json  tsconfig.json
anone-tools/scripts/: account.ts  airdrop-file.ts  mint.ts  minter.ts  query.ts  whitelist-file.ts  whitelist.ts
anone-tools/src/: client.ts  utils.ts
anone-ui/: README.md  config.env  package-lock.json  package.json
anone-ui/public/: index.html
anone-ui/src/: App.css  App.js  chainObj.js  index.css  index.js
app/: app.go  encoding.go  genesis.go  wasm_config.go
app/apptesting/: test_suite.go
chain-net/: README.md
claim/: Cargo.toml
claim/scripts/: build_contract.sh  claim_nft_task.sh  deploy_contract.sh
claim/src/: contract.rs  lib.rs  msg.rs  route.rs
cmd/anoned/: config.go  gengravity.go  genwasm.go  main.go
cw20-base/: Cargo.toml
cw20-base/schema/: execute_msg.json  instantiate_msg.json
cw20-base/scripts/: balance.sh  deploy_contract.sh  transfer.sh
dao-dao/scripts/: deploy_local.sh  deploy_minter_by_dao.sh
docs/: collections_contracts_nfts_relationship.drawio  one-pager-plan-outline.md  plan-timeline-outline.drawio
docs/chain-interaction UI/: UI-Diagrams.asta  definition.md  edit_profile.drawio  profile_management.drawio  profile_page.drawio
docs/proto/: proto-docs.md
docs/static/: openapi.yml
guides/: How-to-mint-an-NFT.md
internal/wasm/: distribution.go  encoder.go  registry.go
lambda/: .gitignore  README.md  build.ts  index.js  package-lock.json  package.json  tsconfig.json
lambda/src/: Server.ts  event-sample.json  handler.ts  index.ts  preStart.ts  util.ts
multiple-node/: Dockerfile  genesis.json
networks/testnet-1/: genesis.json  persistent_peers.txt  seed.txt  seeds.txt
nft-marketplace/: README.md  business-flow.md  config.js  package-lock.json  package.json  tailwind.config.js
nft-marketplace/nft-marketplace/: package-lock.json  package.json
nft-marketplace/pages/: _app.js  index.js
nft-marketplace/src/: App.vue  chain.info.anonetestnet.js  config.js
proto/: buf.yaml
proto/anone/: genesis.proto  query.proto  tx.proto
proto/claims/: claim_record.proto  genesis.proto  params.proto  query.proto  tx.proto
proto/ico/: genesis.proto  ico.proto  params.proto  query.proto  tx.proto
proto/launchpad/: genesis.proto  params.proto  project.proto  query.proto  tx.proto
scripts/: full_protocgen.sh  protoc-gen-installer.sh  protocgen.sh  quick_protocgen.sh  test_claim.sh  test_node_deploy.sh
solidity/: .env.example  .gitignore  README.md  contract-deployer.ts  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
solidity/test/: index.ts  (+1 more)
testnet_files/: genesis.json  seeds.txt
vue/: .env  .env.local.this_one  .env.spn  .env.spn.not_this_one  babel.config.js  package-lock.json  package.json  vue.config.js
(+307 files in other folders)
