[workspace]
members = ["contracts/*", "packages/*"]

[profile.release.package.anone-whitelist]
codegen-units = 1
incremental = false

[profile.release.package.anone-minter]
codegen-units = 1
incremental = false

[profile.release.package.anone-nft-marketplace]
codegen-units = 1
incremental = false

[profile.release.package.an-std]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false