[package]
name = "anone-cw721"
description = "An implementation of cw721 for Anone project"
version = "0.1.0"
authors = ["Nguyen The Vinh <nghuyenthevinh@gmail.com>"]
edition = "2021"
repository = "https://github.com/notional-labs/anone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw721 = "0.11.0"
cw721-base = { version = "0.11.0", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }