[package]
name = "anone-cw721"
description = "An implementation of cw721 for Anone project"
license = "Apache-2.0"
version = "0.3.0"
authors = ["Chinh D. Nguyen <eyescryptoinsights@gmail.com>"]
edition = "2021"
repository = "https://github.com/notional-labs/anone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw721 = "0.11.0"
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.11.1"
cw-utils = "0.12.1"
cw2 = "0.12.1"
schemars = "0.8"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.30" }
url = "2.2.2"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }