[package]
name = "anone-nft-marketplace"
description = "NFT marketplace contract of Anone project"
version = "0.1.0"
edition = "2021"
author = ["Chinh D. Nguyen <eyescryptoinsights@gmail.com"]
repository = "https://github.com/notional-labs/anone"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12.1"
cw2 = "0.12.1"
cw721 = "0.11.0"
anone-cw721 = { version = "0.1.0", features = ["library"] }

schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }