[package]
name = "anone-minter"
version = "0.1.0"
edition = "2021"
author = ["Chinh D. Nguyen <eyescryptoinsights@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta5" }
cosmwasm-storage = { version = "1.0.0-beta5" }
cw-storage-plus = "0.12.1"
cw2 = "0.12.1"
cw-utils = "0.12.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
url = "2.2.0"
cw721 = "0.12.0"
sg721 = "0.8.2"
